# locvi

./: .gitignore  LocVi.spec  README.md  app.py  pyproject.toml  requirements.txt  run.py  run.spec  ullas_gpg.pub
app/: __init__.py  helpers.py  routes.py
app/static/: main.css  manifest.json  root.css  selector.css  sw.js
app/templates/: main.html  selector.html
locvi/: __init__.py
